--- a/CoderGirl_MVCMovies/Views/MovieRating/Create.cshtml
+++ b/CoderGirl_MVCMovies/Views/MovieRating/Create.cshtml
@@ -8,7 +8,7 @@
     <select name="movieName">
         @foreach (var movie in ViewBag.Movies)
         {
-            <option>@movie.Value</option>
+            <option>@movie.Name</option>
         }
     </select>
     <select name="rating">
@@ -20,5 +20,7 @@
     </select>
     <button type='submit'>Rate it</button>
 </form>
+
+
 
 
