--- a/CoderGirl_MVCMovies/Views/MovieRating/Create.cshtml
+++ b/CoderGirl_MVCMovies/Views/MovieRating/Create.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@*@model List<CoderGirl_MVCMovies.Models.MovieRating>*@
+
+@model List<CoderGirl_MVCMovies.Models.Movie>
 @{
     ViewData["Title"] = "Rate Movie";
 }
@@ -6,19 +8,19 @@
 <h1>Rate a Movie</h1>
 <form method='post'>
     <select name="movieName">
-        @foreach (var movie in ViewBag.Movies)
+        @foreach (var movie in Model)
         {
-            <option>@movie.Value</option>
+            <option>@movie.Name</option>
         }
     </select>
-    <select name="rating">
+    <select name="Rating">
         <option>1</option>
         <option>2</option>
         <option>3</option>
         <option>4</option>
         <option>5</option>
     </select>
-    <button type='submit'>Rate it</button>
+    <button type='submit'>Rate Movie</button>
 </form>
 
 
