partially working tests

--- a/CoderGirl_MVCMovies/Views/MovieRating/Create.cshtml
+++ b/CoderGirl_MVCMovies/Views/MovieRating/Create.cshtml
@@ -7,7 +7,7 @@
 
 <h1>Rate a Movie</h1>
 <form method='post'>
-    <select name="movieName">
+    <select name="Movie">
         @foreach (var movie in Model)
         {
             <option>@movie.Name</option>
