--- a/CoderGirl_MVCMovies/Views/MovieRating/Edit.cshtml
+++ b/CoderGirl_MVCMovies/Views/MovieRating/Edit.cshtml
@@ -10,7 +10,7 @@
     <select name="movieName" readonly>
         @*@foreach (var movie in Model)
         {*@
-        <option>@Model.MovieName</option>
+        <option>@Model.Movie</option>
 
     </select>
     <select name="rating">
