--- a/CoderGirl_MVCMovies/Views/MovieRating/Index.cshtml
+++ b/CoderGirl_MVCMovies/Views/MovieRating/Index.cshtml
@@ -13,7 +13,7 @@
     @foreach(var movieRating in Model)
     {
     <tr>
-        <td>@movieRating.MovieName</td>
+        <td>@movieRating.Movie</td>
         <td>@movieRating.Rating</td>
         <td><a asp-controller="MovieRating" asp-action="Edit" asp-route-id="@movieRating.Id">Edit</a></td>
         <td><a asp-controller="MovieRating" asp-action="Delete" asp-route-id="@movieRating.Id">Delete</a></td>
