1 more passing test! 2 to go!

--- a/CoderGirl_MVCMovies/Views/MovieRating/Edit.cshtml
+++ b/CoderGirl_MVCMovies/Views/MovieRating/Edit.cshtml
@@ -9,7 +9,7 @@
 <form asp-action="Edit">
     <select name="movieName" readonly>
         @*@foreach (var movie in Model)
-        {*@
+            {*@
         <option>@Model.Movie</option>
 
     </select>
@@ -20,7 +20,8 @@
         <option>4</option>
         <option>5</option>
     </select>
-    <input type='submit' value="Update Movie Rating" class="btn btn-primary" />
+    @*<input type='submit' value="Update Rating" class="btn btn-primary" />*@
+    <button type='submit'>Update Rating</button>
 </form>
 
 
