--- a/CoderGirl_MVCMovies/Views/MovieRating/Edit.cshtml
+++ b/CoderGirl_MVCMovies/Views/MovieRating/Edit.cshtml
@@ -7,20 +7,18 @@
 
 <h1>Edit Movie Rating</h1>
 <form asp-action="Edit">
-    <select name="movieName" readonly>
-        @*@foreach (var movie in Model)
-            {*@
-        <option>@Model.Movie</option>
 
-    </select>
-    <select name="rating">
+    <label asp-for="Movie" class="control-label"></label>
+    <input asp-for="Movie" id="Movie" readonly class="form-control" />
+
+    <select name="Rating" id="Rating">
         <option>1</option>
         <option>2</option>
         <option>3</option>
         <option>4</option>
         <option>5</option>
     </select>
-    @*<input type='submit' value="Update Rating" class="btn btn-primary" />*@
+
     <button type='submit'>Update Rating</button>
 </form>
 
