Added Director class and views

--- a/CoderGirl_MVCMovies/Views/Movie/Index.cshtml
+++ b/CoderGirl_MVCMovies/Views/Movie/Index.cshtml
@@ -8,9 +8,14 @@
 <a asp-controller="Movie" asp-action="Create">Add New Movie</a>
 <table>
     <tr>
-        <th>Movie Name</th>
+        <th>Name</th>
         <th>Director</th>
         <th>Year</th>
+        <th>Average Rating</th>
+        <th>Number of Ratings</th>
+        <th>Edit</th>
+        <th>Delete</th>
+
     </tr>
     @foreach (var movie in Model)
     {
@@ -18,6 +23,8 @@
         <td>@movie.Name</td>
         <td>@movie.Director</td>
         <td>@movie.Year</td>
+        @*<td>@movie.</td>*@
+
         <td><a asp-controller="Movie" asp-action="Edit" asp-route-id="@movie.Id">Edit</a></td>
         <td><a asp-controller="Movie" asp-action="Delete" asp-route-id="@movie.Id">Delete</a></td>
     </tr>
