--- a/CoderGirl_MVCMovies/Views/MovieRating/Create.cshtml
+++ b/CoderGirl_MVCMovies/Views/MovieRating/Create.cshtml
@@ -5,13 +5,23 @@
 }
 
 <h1>Rate a Movie</h1>
+<h2> </h2>
 <form method='post'>
-    <select asp-for="MovieName">
-        @foreach (var name in ViewBag.MovieNames)
-        {
-            <option>@name</option>
-        }
-    </select>
+
+    @if (@ViewContext.RouteData.Values["id"].ToString() != "")
+    {
+        <input asp-for="@model." readonly class="form-control" />
+
+    }
+    else
+    {
+        <select asp-for="MovieName">
+            @foreach (var movie in ViewBag.Movies)
+            {
+                <option value="@movie.Id">@movie.Name</option>
+            }
+        </select>
+    }
     <select asp-for="Rating">
         <option>1</option>
         <option>2</option>
