--- a/CoderGirl_MVCMovies/Views/Director/Index.cshtml
+++ b/CoderGirl_MVCMovies/Views/Director/Index.cshtml
@@ -1,5 +1,24 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model List<CoderGirl_MVCMovies.Models.Director>
 @{
+    ViewData["Title"] = "Directors";
 }
+
+<h1>Directors</h1>
+<a id="add-new-director" asp-action="Create">Add a Director</a>
+<table>
+    <tr>
+        <th>Name</th>
+        <th>Birth Date</th>
+        <th>Nationality</th>
+    </tr>
+    @foreach (var director in Model)
+    {
+    <tr>
+        <td>@director.LastName, @director.FirstName</td>
+        <td>@director.BirthDate</td>
+        <td>@director.Nationality</td>
+        <td><a asp-action="Edit" asp-route-id="@director.Id">Edit</a></td>
+        <td><a asp-action="Delete" asp-route-id="@director.Id">Delete</a></td>
+    </tr>
+    }
+</table>
