--- a/CoderGirl_MVCMovies/Views/Movie/Create.cshtml
+++ b/CoderGirl_MVCMovies/Views/Movie/Create.cshtml
@@ -18,10 +18,11 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Director" class="control-label"></label><br />  
                 <select asp-for="DirectorId">
                     @foreach (var director in ViewBag.Directors)
                     {
-                        <option value="@director.Id">@director.DirectorName</option>
+                        <option value="@director.Id">@director.LastName, @director.FirstName</option>
                     }
                 </select>
             </div>
