Got most of the tests passing

--- a/CoderGirl_MVCMovies/Views/Movie/Index.cshtml
+++ b/CoderGirl_MVCMovies/Views/Movie/Index.cshtml
@@ -8,7 +8,7 @@
 <a asp-controller="Movie" asp-action="Create">Add New Movie</a>
 <table>
     <tr>
-        <th>Name</th>
+        <th>Movie Name</th>
         <th>Director</th>
         <th>Year</th>
         <th>Average Rating</th>
@@ -21,11 +21,29 @@
     {
     <tr>
         <td>@movie.Name</td>
-        <td>@movie.Director</td>
+        <td>@movie.Director.LastName, @movie.Director.FirstName </td>
         <td>@movie.Year</td>
-        @*<td>@movie.</td>*@
 
-        <td><a asp-controller="MovieRating" asp-action="Create" asp-route-id="@movie.Id">Rate</a></td>
+        @if (movie.Ratings.Count > 0)
+        {
+            <td>@movie.AverageRating </td>
+        }
+        else
+        {
+            <td>none</td>
+        }
+
+        @if (movie.Ratings.Count > 0)
+        {
+            <td>@movie.NumberOfRatings </td>
+        }
+        else
+        {
+            <td>0</td>
+        }
+
+
+        <td><a asp-controller="MovieRating" asp-action="Create" asp-route-movieId="@movie.Id">Rate</a></td>
         <td><a asp-controller="Movie" asp-action="Edit" asp-route-id="@movie.Id">Edit</a></td>
         <td><a asp-controller="Movie" asp-action="Delete" asp-route-id="@movie.Id">Delete</a></td>
     </tr>
