--- a/CoderGirl_MVCMovies/Views/Shared/_Layout.cshtml
+++ b/CoderGirl_MVCMovies/Views/Shared/_Layout.cshtml
@@ -37,6 +37,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Movie" asp-action="Create">Add Movie</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="MovieRating" asp-action="Index">Movie Rating</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Director" asp-action="Index">Directors</a>
+                        </li>
                     </ul>
                 </div>
             </div>
