--- a/CoderGirl_MVCMovies/Views/MovieRating/Create.cshtml
+++ b/CoderGirl_MVCMovies/Views/MovieRating/Create.cshtml
@@ -8,20 +8,20 @@
 <h2> </h2>
 <form method='post'>
 
-    @if (@ViewContext.RouteData.Values["id"].ToString() != "")
+    @*@if (@ViewContext.RouteData.Values["id"].ToString() != "")
     {
         <input asp-for="@model." readonly class="form-control" />
 
     }
     else
-    {
+    {*@
         <select asp-for="MovieName">
             @foreach (var movie in ViewBag.Movies)
             {
                 <option value="@movie.Id">@movie.Name</option>
             }
         </select>
-    }
+    @*}*@
     <select asp-for="Rating">
         <option>1</option>
         <option>2</option>
