--- a/CoderGirl_MVCMovies/Views/MovieRating/Index.cshtml
+++ b/CoderGirl_MVCMovies/Views/MovieRating/Index.cshtml
@@ -7,7 +7,8 @@
 <a id="add-movierating" asp-action="Create">Rate a Movie</a>
 <table>
     <tr>
-        <th>Movie</th><th>Rating</th>
+        <th>Movie</th>
+        <th>Rating</th>
     </tr>
     @foreach(var movieRating in Model)
     {
