All of the tests are passing now

--- a/CoderGirl_MVCMovies/Views/Movie/Index.cshtml
+++ b/CoderGirl_MVCMovies/Views/Movie/Index.cshtml
@@ -19,7 +19,7 @@
     </tr>
     @foreach (var movie in Model)
     {
-    <tr>
+    <tr id="@movie.Id">
         <td>@movie.Name</td>
         <td>@movie.Director.LastName, @movie.Director.FirstName </td>
         <td>@movie.Year</td>
@@ -43,7 +43,7 @@
         }
 
 
-        <td><a asp-controller="MovieRating" asp-action="Create" asp-route-movieId="@movie.Id">Rate</a></td>
+        <td><a asp-controller="MovieRating" asp-action="Create" asp-route-movieId=@movie.Id>Rate</a></td>
         <td><a asp-controller="Movie" asp-action="Edit" asp-route-id="@movie.Id">Edit</a></td>
         <td><a asp-controller="Movie" asp-action="Delete" asp-route-id="@movie.Id">Delete</a></td>
     </tr>
