Working on ViewModels branch

--- a/CoderGirl_MVCMovies/Views/MovieRating/Create.cshtml
+++ b/CoderGirl_MVCMovies/Views/MovieRating/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model CoderGirl_MVCMovies.Models.MovieRating
+﻿@model CoderGirl_MVCMovies.ViewModels.MovieRatings.MovieRatingCreateViewModel
 
 @{
     ViewData["Title"] = "Rate Movie";
