Working on Movie ViewModel

--- a/CoderGirl_MVCMovies/Views/Movie/Edit.cshtml
+++ b/CoderGirl_MVCMovies/Views/Movie/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model CoderGirl_MVCMovies.Models.Movie
+﻿@model CoderGirl_MVCMovies.ViewModels.Movies.MovieEditViewModel
 
 @{
     ViewData["Title"] = "Edit";
