--- a/CoderGirl_MVCMovies/Views/Movie/Create.cshtml
+++ b/CoderGirl_MVCMovies/Views/Movie/Create.cshtml
@@ -33,7 +33,7 @@
                 <span asp-validation-for="Year" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <button type="submit" value="Create" class="btn btn-primary">Create</button>
             </div>
         </form>
     </div>
