--- a/CoderGirl_MVCMovies/Views/Movie/Edit.cshtml
+++ b/CoderGirl_MVCMovies/Views/Movie/Edit.cshtml
@@ -15,6 +15,7 @@
                 <input readonly asp-for="Name" class="form-control" value="@Model.Name" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
+            <input readonly hidden asp-for="DirectorId" />
             <div class="form-group">
                 <label asp-for="DirectorName" class="control-label"></label>
                 <input asp-for="DirectorName" class="form-control" value="@Model.DirectorName" />
