--- a/CoderGirl_MVCMovies/Views/MovieRating/Create.cshtml
+++ b/CoderGirl_MVCMovies/Views/MovieRating/Create.cshtml
@@ -5,16 +5,43 @@
 }
 
 <h1>Rate a Movie</h1>
-<form method='post'>
-    <input readonly asp-for="MovieName" value="@Model.MovieName"/>
-    <select asp-for="Rating">
-        <option>1</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
-    </select>
-    <button type='submit'>Rate Movie</button>
-</form>
+
+<h4>MovieRatingCreateViewModel</h4>
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="Create">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="MovieName" class="control-label">Movie Name</label>
+                <input readonly asp-for="MovieName" value="@Model.MovieName" class="form-control" />
+                <span asp-validation-for="MovieName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label hidden asp-for="MovieId" class="control-label"></label>
+                <input hidden asp-for="MovieId" class="form-control" />
+                <span asp-validation-for="MovieId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Rating" class="control-label"></label>
+                <select asp-for="Rating">
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                </select>
+                <span asp-validation-for="Rating" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <button type="submit" value="Create" class="btn btn-primary">Rate Movie</button>
+            </div>
+        </form>
+    </div>
+</div>
+
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>
 
 
