--- a/CoderGirl_MVCMovies/Views/MovieRating/Edit.cshtml
+++ b/CoderGirl_MVCMovies/Views/MovieRating/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model CoderGirl_MVCMovies.Models.MovieRating
+﻿@model CoderGirl_MVCMovies.ViewModels.MovieRatings.MovieRatingEditViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -6,17 +6,42 @@
 
 <h1>Edit Rating</h1>
 
-<form method='post'>
-    <input readonly asp-for="MovieName" value="@Model.MovieName" />
-    <select asp-for="Rating">
-        <option>1</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
-    </select>
-    <button type='submit'>Update Rating</button>
-</form>
+<h4>MovieRatingEditViewModel</h4>
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="Edit">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Rating" class="control-label"></label>
+                <input asp-for="Rating" class="form-control" />
+                <span asp-validation-for="Rating" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="MovieName" class="control-label"></label>
+
+                <input readonly asp-for="MovieName" value="@Model.MovieName" />
+                <select asp-for="Rating">
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                </select>
+
+                <span asp-validation-for="MovieName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="MovieId" class="control-label"></label>
+                <input asp-for="MovieId" class="form-control" />
+                <span asp-validation-for="MovieId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
+</div>
 
 <div>
     <a asp-action="Index">Back to List</a>
